--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -9,7 +9,7 @@ RUN chmod -R g=u /var/run/httpd /var/log/httpd && \
     chgrp -R 0 /var/run/httpd /var/log/httpd
 
 RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
-    sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080" /etc/httpd/conf/httpd.conf
+    sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd/conf/httpd.conf
 
 EXPOSE 8080
 
