--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -18,6 +18,10 @@ EXPOSE 8080
 # This stuff is needed to ensure a clean start
 RUN rm -rf /run/httpd && mkdir /run/httpd
 
+
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
+    sed -i "s/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g" /etc/httpd7conf/httpd.conf
+
 # Run as the root user
 USER 1001
 
